<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".windows7"
    android:background="@drawable/bl"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:src="@drawable/w7"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="CARA INSTALASI WINDOWS 7 "
                android:textAlignment="center"
                android:textColor="#E91E63"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textw71"
            android:textColor="#ffff" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw72"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w72"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w72">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw73"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w73"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w73">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw74"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w74"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w74">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw75"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w75"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w75">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw76"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w76"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w76">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw77"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w77"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w77">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw78"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w78"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w78">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textw79"
                android:textColor="#ffff" />
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/w79"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/w79">
            </ImageView>


            <Button
                android:id="@+id/Button02"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="47dp"
                android:background="#E91E63"
                android:text="KEMBALI"
                android:textColor="#E9E4E6"
                android:textSize="18px">

            </Button>

            <Button
                android:id="@+id/Buttonvideo"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="47dp"
                android:background="#E91E63"
                android:text="VIDEO"
                android:textColor="#E9E4E6"
                android:textSize="18px">

            </Button>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>